[package]
name = "clido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
dirs = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
tabled = "0.10.0"
tempfile = "3.3.0"
xdg = "2.4.1"
